--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,22 +13,7 @@
     <div>
 
         <!-- Header Section -->
-        <header id="header-section">
-            <div id="logo-div">
-                <img src="./static/assets/logo.png" alt="logo-for-real-forum" class="logo">
-            </div>
-            <div id="profile-and-add-new-button-div" class="hidden">
-                <button id="add-new-button">NEW POST</button>
-                <!-- Dropdown Menu -->
-                <div class="dropdown">
-                    <button id="dropdown-toggle" class="dropdown-toggle">K</button>
-                    <div class="dropdown-menu" id="dropdown-menu">
-                        <button id="user-profile-button">Profile</button>
-                        <button id="logout-button">Logout</button>
-                    </div>
-                </div>
-            </div>
-        </header>
+        <header id="header-section"></header>
 
         <div class="login-container visible" id="login-container">
             <div id="login-section">
@@ -127,5 +112,3 @@
     <script src="./static/script.js" type="module"></script>
 </body>
 </html>
-
-
