--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,8 +105,27 @@
                  <div id="user-profile" class="hidden"></div>
 
                  <div id="messenger-container" class="hidden"></div>
+
+                 <div id="dialog-container" class="hidden"></div>
             </main>
         </main>
+
+        <!-- Custome Confirm -->
+        <div id="custom-confirm" class="modal hidden">
+            <div class="modal-content">
+                <p id="confirm-message">Are you sure?</p>
+                <button id="confirm-yes" class="modal-button">Yes</button>
+                <button id="confirm-no" class="modal-button">No</button>
+            </div>
+        </div>
+
+        <!-- Custome Alert -->
+        <div id="custom-alert" class="modal hidden">
+            <div class="modal-content">
+                <p id="alert-message">Alert message here</p>
+                <button id="alert-ok" class="modal-button">OK</button>
+            </div>
+        </div>
     </div>
 
     <script src="./static/script.js" type="module"></script>
